Fix: Use resource group name

--- a/.github/workflows/iac-fabric-dataplatform.yml
+++ b/.github/workflows/iac-fabric-dataplatform.yml
@@ -22,8 +22,9 @@ jobs:
     - name: deploy
       uses: azure/arm-deploy@v1
       with:
-        scope: subscription
-        region: australiaeast
+        scope: resourceGroup
+        region: westeurope
+        resourceGroupName: ${{ secrets.RESOURCE_GROUP_NAME }}
         subscriptionId: ${{ secrets.SUBSCRIPTION_ID }}
         template: iac/bicep/main.bicep
         # parameters: 'k1=v1 k2=v2 k3=v3'
