--- a/.github/workflows/iac-fabric-dataplatform.yml
+++ b/.github/workflows/iac-fabric-dataplatform.yml
@@ -28,6 +28,4 @@ jobs:
         template: iac/bicep/main.bicep
         # parameters: 'k1=v1 k2=v2 k3=v3'
         failOnStdErr: false
-        parameters: |
-          --debug
-
+        parameters: --debug
